<resources>
    <string name="app_name">My Workout Application</string>


    <string name="application_name">My Workout Planner</string>
    <string name="workout_clipart_description">Three people working out</string>
    <string name="view_menu_menu_button_text">Main Menu</string>
    <string name="view_dashboard_button_text">Dashboard</string>
    <string name="dashboard_exercise_button_description">Person exercising</string>
    <string name="dashboard_stretching_button_description">Person stretching</string>
    <string name="dashboard_converter_button_description">Symbols depicting conversion of units</string>

    <string name="converter_title">Converter</string>
    <string name="converter_text_input_hint">1&#8211;999 999</string>
    <string name="converter_instructions">Type quantity to convert</string>
    <string name="converter_convert_button">Convert</string>
    <string name="converter_from_type">From:</string>
    <string name="converter_to_type">To:</string>

    <string name="kg">kg</string>
    <string name="g">g</string>
    <string name="lbs">lbs</string>

    <string name="converter_result">Result:</string>
    <string-array name="converter_options">
        <item>units</item>
        <item>kg</item>
        <item>g</item>
        <item>lbs</item>
    </string-array>


    <string name="percentage_text">%1$d%%</string>
    <string name="name_text">Name: %1$s</string>
    <string name="description_text">Description: %1$s</string>
    <string name="repetition_text">Repetition: %1$d</string>
    <string name="sets_text">Sets: %1$d</string>
    <string name="seconds_text">Seconds: %1$d</string>
    <string name="weight_text">Weight: %1$d</string>
    <string name="goal_text">Goal: %1$d</string>
    <string name="goal_history_title">Goal history: </string>

    <string name="exercise_title">Exercises</string>
    <string name="exercise_title_hint">Exercise name</string>
    <string name="exercise_description_hint">Exercise description</string>
    <string name="exercise_repetition_hint">Repetitions in one set</string>
    <string name="exercise_sets_hint">Number of sets</string>
    <string name="exercise_weight_hint">Weight</string>
    <string name="exercise_goal_hint">Weight goal</string>
    <string name="exercise_dialog_box_title">Add Exercise</string>
    <string name="exercise_edit_dialog_box_title">Edit Exercise</string>
    <string name="exercise_details_dialog_box_title">Exercise Details</string>

    <string name="stretch_title">Stretches</string>
    <string name="stretch_title_hint">Stretch name</string>
    <string name="stretch_description_hint">Stretch description</string>
    <string name="stretch_time_hint">Seconds to hold one sett</string>
    <string name="stretch_sets_hint">Number of sets</string>
    <string name="stretch_goal_hint">Goal seconds</string>
    <string name="stretch_dialog_box_title">Add Stretch</string>
    <string name="stretch_edit_dialog_box_title">Edit Stretch</string>
    <string name="stretch_details_dialog_box_title">Stretch Details</string>

    <string name="dialog_add_button_title">Save</string>
    <string name="dialog_cancel_button_title">Cancel</string>
    <string name="dialog_details_button_title">Details</string>
    <string name="dialog_done_details_button_title">Done</string>
    <string name="dialog_edit_details_button_title">Edit</string>

    <string name="dashboard_privacy_button_text">Privacy</string>
    <string name="privacy_policy_title_text">Privacy Policy</string>
    <string name="privacy_policy_body_text">
        We don\'t store your data, period.\n\nFor more information please see PawTime\'s online statement:
    </string>
    <string name="privacy_url">
        <a href="https://docs.google.com/document/d/150AFDbB-cVmNMVHCBEZW364hm9zdLckV2gjIBZAHDyo/edit?usp=sharing">CLICK HERE</a>
    </string>

    <string name="disclaimer_title_text">Disclaimer</string>
    <string name="disclaimer_body_text">
        All icons are made by Cursor Creative, Pixel perfect, and Freepik from www.flaticon.com. Some are combined to create new icons by the developer of this app.
    </string>



</resources>
