<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DashboardActivity">

    <include
            android:id="@+id/dashboard_main"
            layout="@layout/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
            android:id="@+id/dashboard_stretching_button"
            android:layout_width="126dp"
            android:layout_height="127dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/colorPrimaryWhite"
            android:contentDescription="@string/dashboard_stretching_button_description"
            android:scaleType="fitCenter"
            android:src="@drawable/stretching_icon"
            android:text="@string/converter_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dashboard_main" />

    <ImageButton
            android:id="@+id/dashboard_exercises_button"
            android:layout_width="126dp"
            android:layout_height="127dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryWhite"
            android:contentDescription="@string/dashboard_exercise_button_description"
            android:scaleType="fitCenter"
            android:src="@drawable/exercise2_icon"
            android:text="@string/converter_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


    <ImageButton
            android:id="@+id/dashboard_converter_button"
            android:layout_width="126dp"
            android:layout_height="127dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryWhite"
            android:contentDescription="@string/dashboard_converter_button_description"
            android:scaleType="fitCenter"
            android:src="@drawable/weight_scale_icon"
            android:text="@string/converter_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="4dp"
            android:text="@string/stretch_title"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_stretching_button" />

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/exercise_title"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_exercises_button" />

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/converter_title"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_converter_button" />

    <Button
            android:id="@+id/dashboard_privacy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/dashboard_privacy_button_text"
            android:textColor="@color/colorPrimaryWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>