<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DashboardActivity">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_dashboard_button_text"
            android:id="@+id/textView2"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.102"/>


    <ImageButton
            android:text="@string/view_converter_button_text"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/dashboard_stretching_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.009"
            android:background="@drawable/stretch_clipart"
            android:contentDescription="@string/dashboard_stretching_button_description"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <ImageButton
            android:text="@string/view_converter_button_text"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/dashboard_exercises_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/exercise_clipart"
            android:contentDescription="@string/dashboard_exercise_button_description"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/dashboard_stretching_button"
            app:layout_constraintVertical_bias="0.0"/>


    <ImageButton
            android:text="@string/view_converter_button_text"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/dashboard_converter_button"
            android:background="@drawable/converter_clipart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/dashboard_converter_button_description"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_exercises_button"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>


</androidx.constraintlayout.widget.ConstraintLayout>