<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".converter.ConverterActivity">


    <include
            android:id="@+id/include2"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="116dp" />

    <TextView
            android:id="@+id/converter_title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="89dp"
            android:text="@string/converter_instructions"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/include2" />

    <EditText
            android:id="@+id/converter_input_number"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/converter_text_input_hint"
            android:inputType="numberDecimal"
            android:maxLength="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/converter_title_id"
            tools:ignore="Autofill" />


    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/converter_input_number">

        <TextView
                android:id="@+id/converter_pick_from_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/converter_from_type"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="66dp"
                tools:layout_editor_absoluteY="266dp" />


        <Spinner
                android:id="@+id/converter_spinner_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="27sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="130dp"
                tools:layout_editor_absoluteY="256dp" />

        <TextView
                android:id="@+id/converter_pick_to_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/converter_to_type"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="300dp"
                tools:layout_editor_absoluteY="265dp" />

        <Spinner
                android:id="@+id/converter_spinner_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="27sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="341dp"
                tools:layout_editor_absoluteY="254dp" />
    </LinearLayout>

    <Button
            android:id="@+id/convert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/converter_convert_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/convert_button">

        <TextView
                android:id="@+id/converter_result_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/converter_result"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/converter_result_content_id"
                android:layout_width="179dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text=""
                android:textColor="#E91E63"
                android:textSize="28sp"
                android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>