<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConverterActivity">

    <include layout="@layout/toolbar" tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="-46dp"/>


    <TextView
            android:id="@+id/converter_title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converter_instructions"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.493" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.168"/>

    <EditText
            android:id="@+id/converter_input_number"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            tools:ignore="Autofill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.028"
            app:layout_constraintStart_toStartOf="@+id/converter_title_id"
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="numberDecimal"
            android:hint="@string/converter_text_input_hint"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/converter_title_id"
            android:layout_marginStart="8dp"/>

    <TextView
            android:id="@+id/converter_pick_from_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converter_from_type"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.149" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/converter_input_number"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/converter_title_id"
            app:layout_constraintHorizontal_bias="0.003"/>


    <Spinner
            android:id="@+id/converter_spinner_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.129" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/converter_input_number"
            app:layout_constraintStart_toEndOf="@+id/converter_pick_from_id" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.012"/>

    <TextView
            android:id="@+id/converter_pick_to_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converter_to_type"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.147"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/converter_input_number"
            app:layout_constraintStart_toEndOf="@+id/converter_input_number"
    />

    <Spinner
            android:id="@+id/converter_spinner_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.127" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/converter_input_number"
            app:layout_constraintStart_toEndOf="@+id/converter_pick_to_id" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.141"/>

    <Button
            android:id="@+id/convert_button"
            android:text="@string/converter_convert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.488"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/converter_input_number"/>

    <TextView
            android:id="@+id/converter_result_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converter_result"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/converter_title_id"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.288" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/convert_button" android:layout_marginStart="8dp"/>

    <TextView
            android:id="@+id/converter_result_content_id"
            android:layout_width="179dp"
            android:layout_height="36dp"
            android:text=""
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.06" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.263" app:layout_constraintStart_toEndOf="@+id/converter_result_id"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/convert_button" android:textColor="#E91E63"/>


</androidx.constraintlayout.widget.ConstraintLayout>